--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@
 
 /* ===== Global Styles ===== */
 * {
-    margin: 70;
-    padding: 70;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
